# lego-assembly

./: README.md  REQUIREMENTS  legos.py  outline.md  pyproject.toml  simulate_legos.py
