[tool.poetry]
name = "lego-assembly"
version = "0.1.0"
description = ""
authors = ["Dean Malmgren <dean.malmgren@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^2.1.3"
vapory = "^0.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
